--- a/app/index.html
+++ b/app/index.html
@@ -1670,7 +1670,7 @@
                             </p>
                           </div>
                         </div>
-                        <div class="section-info__right">
+                        <div class="section-info__right section-info-r--dec">
                           <img src="img/photo/logo-korp10.jpg" alt="">
                         </div>
                       </div>
@@ -1948,9 +1948,6 @@
 
               <div class="finance__wrap-btn"> <a href="https://www.mtbank.by/about/reporting/finreports" target="_blank" class="btn-corpo">Полный отчет</a></div>
 
-              <p>
-                2015 год выдался для МТБанка достаточно динамичным: в результате капитал и активы МТБанка продолжили свой устойчивый рост.
-              </p>
             </div>
             </div>
           </div>
@@ -1975,11 +1972,11 @@
                     </p>
                     <div class="charts-title">Бухгалтерский баланс на 1 января 2016 года (в миллионах BYR)</div>
                     <div class="charts__row">
-                      <div class="charts__col">
+                      <div class="charts__col charts-col--l">
                         <div id="chartdiv" style="width: 100%; height: 400px; background-color: #FFFFFF;" ></div>
                         <div class="charts-total"><span class="charts-total__label">Итого активы:</span> 6 025 223</div>
                       </div>
-                      <div class="charts__col">
+                      <div class="charts__col charts-col--r">
                         <div id="chartdiv2" style="width: 100%; height: 400px; background-color: #FFFFFF;" ></div>
                         <div class="charts-total"><span class="charts-total__label">Итого активы:</span> 4 612 161</div>
                       </div>
@@ -1989,11 +1986,11 @@
                   <div class="charts__sec">
 
                     <div class="charts__row">
-                      <div class="charts__col">
+                      <div class="charts__col charts-col--l">
                         <div id="chartdiv3" style="width: 100%; height: 400px; background-color: #FFFFFF;" ></div>
                         <div class="charts-total"><span class="charts-total__label">Итого обязательств:</span> 5 331 385</div>
                       </div>
-                      <div class="charts__col">
+                      <div class="charts__col charts-col--r">
                         <div id="chartdiv4" style="width: 100%; height: 400px; background-color: #FFFFFF;" ></div>
                         <div class="charts-total"><span class="charts-total__label">Итого обязательств:</span> 3 950 049</div>
                       </div>
@@ -2003,11 +2000,11 @@
                   <div class="charts__sec">
 
                     <div class="charts__row">
-                      <div class="charts__col">
+                      <div class="charts__col charts-col--l">
                         <div id="chartdiv5" style="width: 100%; height: 400px; background-color: #FFFFFF;" ></div>
                         <div class="charts-total"><span class="charts-total__label">Итого капитал:</span> 693 838</div>
                       </div>
-                      <div class="charts__col">
+                      <div class="charts__col charts-col--r">
                         <div id="chartdiv6" style="width: 100%; height: 400px; background-color: #FFFFFF;" ></div>
                         <div class="charts-total"><span class="charts-total__label">Итого капитал:</span> 662 112</div>
                       </div>
