--- a/app/index.html
+++ b/app/index.html
@@ -1001,7 +1001,7 @@
                                   <section class="regular slider">
                                     <div>
                                       <p>
-                                        <span class="regular__title">Интеллектуальная игра</span> для держателей карты рассрочки <a href="http://halva.mtbank.by/halva" target="_blank">«Халва»</a> и бонусной сберегательной карты <br><a href="http://halva.mtbank.by/halva-plus" target="_blank"> «Халва Плюс»</a>. С помощью подсказок нужно было найти 4 ореха в <br><a href="http://halva.mtbank.by/" target="_blank">каталоге партнеров</a>. Самых сообразительных ожидали приятные бонусы.
+                                        <span class="regular__title">Интеллектуальная игра</span> для держателей карты рассрочки <a href="http://halva.mtbank.by/halva" target="_blank">«Халва»</a> и бонусной сберегательной карты <br><a href="http://halva.mtbank.by/halva-plus" target="_blank"> «Халва Плюс»</a>. С помощью подсказок нужно было найти 4 ореха в <br><a href="https://www.halva.by/shops/" target="_blank">каталоге партнеров</a>. Самых сообразительных ожидали приятные бонусы.
                                       </p>
                                     </div>
                                     
